classDiagram
  class PricingEngine {
    +calculateSalePrice(cost, marginPct)
    +calculateMarginPct(cost, salePrice)
    +applyPercentageIncrease(cost, pct)
    +applyIPC(cost, ipcPct)
    +isMarginAlert(marginPct, minMargin)
    +bulkUpdateCosts(products, pct)
  }

  class SalesMath {
    +lineRevenue(price, qty)
    +lineProfit(price, cost, qty)
    +averageTicket(revenue, saleCount)
  }

  class Local {
    +UUID id
    +Decimal minMarginPct
    +DateTime lastIpcAppliedPeriod
    +DateTime lastUsdAppliedPeriod
  }

  class Category {
    +UUID id
    +IndexType preferredIndex
    +Boolean isActive
  }

  class Product {
    +UUID id
    +Decimal cost
    +Decimal marginPct
    +Decimal salePrice
    +MarginStatus marginStatus
    +Boolean isMarginAlert
  }

  class Sale {
    +UUID id
    +DateTime soldAt
  }

  class SaleLine {
    +Decimal quantity
    +Decimal unitSalePrice
    +Decimal unitCostSnapshot
  }

  class EconomicIndex {
    +IndexType type
    +DateTime period
    +Decimal valuePct
  }

  Local "1" --> "*" Category
  Local "1" --> "*" Product
  Local "1" --> "*" Sale
  Category "0..1" --> "*" Product
  Product "1" --> "*" SaleLine
  Sale "1" --> "*" SaleLine
  Product ..> PricingEngine : calcula precios
  SaleLine ..> SalesMath : KPIs
  Category ..> EconomicIndex : preferred_index
